Add Traefik-compatible docker-compose and network configuration

--- a/.env
+++ b/.env
@@ -4,3 +4,5 @@ GF_SECURITY_ADMIN_PASSWORD=pass
 
 # Validator Details
 VALIDATOR_SECP=<add_your_validator_secp_public_address>
+
+DOCKER_EXT_NETWORK=traefik_default
