Update otel-collector-config to use environment variable for secp_key

--- a/collector/otel-collector-config.yaml
+++ b/collector/otel-collector-config.yaml
@@ -34,7 +34,7 @@ processors:
   resource:
     attributes:
     - key: secp_key
-      value: "SECP_KEY"
+      value: "${VALIDATOR_SECP}"
       action: upsert
 
 service:
